app-samples/whoamicore/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami-service
spec:
  ports:
  - port: 80
  selector:
    app: whoami
