app-samples/whoamicore/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: whoami-service
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/frontend-entry-points: http,https
    #traefik.ingress.kubernetes.io/load-balancer-method: drr
    #traefik.ingress.kubernetes.io/redirect-entry-point: https
    #traefik.ingress.kubernetes.io/redirect-permanent: "true"
spec:
  rules:
  - host: whoamicore.k8s.molnet.app
    http:
      paths:
      - path: /
        backend:
          serviceName: whoami-service
          servicePort: 80
